versions/v4.0.0/build/dts/api/bindings/sensor/ti,ina219.md
---
version: v4.0.0
source_url: https://docs.zephyrproject.org/4.0.0/build/dts/api/bindings/sensor/ti,ina219.html
original_path: build/dts/api/bindings/sensor/ti,ina219.html
---

# ti,ina219 (on i2c bus)

Vendor: [Texas Instruments](../../bindings.md#dt-vendor-ti)

Note

An implementation of a driver matching this compatible is available in
[drivers/sensor/ti/ina219/ina219.c](https://github.com/zephyrproject-rtos/zephyr/blob/main/drivers/sensor/ti/ina219/ina219.c).

## Description

```text
Texas Instruments Bidirectional Current/Power Sensor
```

## Properties

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

| Name | Type | Details |
| --- | --- | --- |
| `lsb-microamp` | `int` | ```text Current LSB in microAmpere Current LSB = max expected current [A] / 2^15 example: 100 -> ~3A ```  This property is **required**. |
| `shunt-milliohm` | `int` | ```text Value of the shunt resistor in milliOhm ```  This property is **required**. |
| `brng` | `int` | ```text Bus Voltage Range 0 = 16 V FSR 1 = 32 V FSR  The default of 32V is the power-on reset value of the device.  Should the expected bus voltage be below 16V set this to 0. ```  Default value: `1`  Legal values: `0`, `1` |
| `pg` | `int` | ```text Programmable Gain 0 = 1  -> ±40 mV 1 = /2 -> ±80 mV 2 = /4 -> ±160 mV 3 = /8 -> ±320 mV  The default of ±320 mV is the power-on reset value of the device.  In case the expected voltage drop across the shunt resistor is lower one can adjust this to get more accurate readings. ```  Default value: `3`  Legal values: `0`, `1`, `2`, `3` |
| `badc` | `int` | ```text Bus ADC configuration 0  = 9 bit -> 84 µs 1  = 10 bit -> 148 µs 2  = 11 bit -> 276 µs 3  = 12 bit -> 532 µs 9  = 12 bit - 2 sample averaging -> 1.06 ms 10 = 12 bit - 4 sample averaging -> 2.13 ms 11 = 12 bit - 8 sample averaging -> 4.26 ms 12 = 12 bit - 16 sample averaging -> 8.51 ms 13 = 12 bit - 32 sample averaging -> 17.02 ms 14 = 12 bit - 64 sample averaging -> 34.05 ms 15 = 12 bit - 128 sample averaging -> 68.10 ms  The default of 12 bit is the power-on reset value of the device.  Lowering the resolution of the ADC gives less accurate readings but cuts down on conversion times.  Averaging over multiple samples gives more stable readings but adds to overall conversion time. ```  Default value: `3`  Legal values: `0`, `1`, `2`, `3`, `9`, `10`, `11`, `12`, `13`, `14`, `15` |
| `sadc` | `int` | ```text Shunt ADC configuration 0  = 9 bit -> 84 µs 1  = 10 bit -> 148 µs 2  = 11 bit -> 276 µs 3  = 12 bit -> 532 µs 9  = 12 bit - 2 sample averaging -> 1.06 ms 10 = 12 bit - 4 sample averaging -> 2.13 ms 11 = 12 bit - 8 sample averaging -> 4.26 ms 12 = 12 bit - 16 sample averaging -> 8.51 ms 13 = 12 bit - 32 sample averaging -> 17.02 ms 14 = 12 bit - 64 sample averaging -> 34.05 ms 15 = 12 bit - 128 sample averaging -> 68.10 ms  The default of 12 bit is the power-on reset value of the device.  Lowering the resolution of the ADC gives less accurate readings but cuts down on conversion times.  Averaging over multiple samples gives more stable readings but adds to overall conversion time. ```  Default value: `3`  Legal values: `0`, `1`, `2`, `3`, `9`, `10`, `11`, `12`, `13`, `14`, `15` |
| `friendly-name` | `string` | ```text Human readable string describing the sensor. It can be used to distinguish multiple instances of the same model (e.g., lid accelerometer vs. base accelerometer in a laptop) to a host operating system.  This property is defined in the Generic Sensor Property Usages of the HID Usage Tables specification (https://usb.org/sites/default/files/hut1_3_0.pdf, section 22.5). ``` |
| `supply-gpios` | `phandle-array` | ```text GPIO specifier that controls power to the device.  This property should be provided when the device has a dedicated switch that controls power to the device.  The supply state is entirely the responsibility of the device driver.  Contrast with vin-supply. ``` |
| `vin-supply` | `phandle` | ```text Reference to the regulator that controls power to the device. The referenced devicetree node must have a regulator compatible.  This property should be provided when device power is supplied by a shared regulator.  The supply state is dependent on the request status of all devices fed by the regulator.  Contrast with supply-gpios.  If both properties are provided then the regulator must be requested before the supply GPIOS is set to an active state, and the supply GPIOS must be set to an inactive state before releasing the regulator. ``` |

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “ti,ina219” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `status` | `string` | ```text indicates the operational status of a device ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text compatible strings ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg` | `array` | ```text register space ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text name of each register space ``` |
| `interrupts` | `array` | ```text interrupts for device ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts-extended` | `compound` | ```text extended interrupt specifier for device ``` |
| `interrupt-names` | `string-array` | ```text name of each interrupt ``` |
| `interrupt-parent` | `phandle` | ```text phandle to interrupt controller node ``` |
| `label` | `string` | ```text Human readable string describing the device (used as device_get_binding() argument) ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information.  This property is **deprecated**. |
| `clocks` | `phandle-array` | ```text Clock gate information ``` |
| `clock-names` | `string-array` | ```text name of each clock ``` |
| `#address-cells` | `int` | ```text number of address cells in reg property ``` |
| `#size-cells` | `int` | ```text number of size cells in reg property ``` |
| `dmas` | `phandle-array` | ```text DMA channels specifiers ``` |
| `dma-names` | `string-array` | ```text Provided names of DMA channel specifiers ``` |
| `io-channels` | `phandle-array` | ```text IO channels specifiers ``` |
| `io-channel-names` | `string-array` | ```text Provided names of IO channel specifiers ``` |
| `mboxes` | `phandle-array` | ```text mailbox / IPM channels specifiers ``` |
| `mbox-names` | `string-array` | ```text Provided names of mailbox / IPM channel specifiers ``` |
| `power-domains` | `phandle-array` | ```text Power domain specifiers ``` |
| `power-domain-names` | `string-array` | ```text Provided names of power domain specifiers ``` |
| `#power-domain-cells` | `int` | ```text Number of cells in power-domains property ``` |
| `zephyr,deferred-init` | `boolean` | ```text Do not initialize device automatically on boot. Device should be manually initialized using device_init(). ``` |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
| `zephyr,disabling-power-states` | `phandles` | ```text List of power states that will disable this device power. ``` |
